--- a/views/index.go.html
+++ b/views/index.go.html
@@ -1,6 +1,7 @@
     <h2>Informations</h2>
     <ul>
-        <li>Version: {{.version}}
+        <li>Version: {{.version}}</li>
+        <li>Commit: {{.commit}}</li>
         <li>Time: {{currentTime}}</li>
         <li>Start time: {{.startTime}}</li>
         <li>User Agent: {{.userAgent}}</li>
