--- a/views/layouts/main.go.html
+++ b/views/layouts/main.go.html
@@ -74,6 +74,10 @@
         color: #474747;
         background-color: #76D7C4;
     }
+    .alert-info {
+        color: #474747;
+        background-color: #85C1E9;
+    }
     .alert-error {
         color: #fff;
         background-color: #C70039;
