--- a/views/index.go.html
+++ b/views/index.go.html
@@ -1,4 +1,4 @@
-    <h2>Informations</h2>
+    <h2>Information</h2>
     <ul>
         <li>Version: {{.version}}</li>
         <li>Commit: {{.commit}}</li>
