--- a/views/layouts/main.go.html
+++ b/views/layouts/main.go.html
@@ -88,7 +88,7 @@
     <div class="container">
         <h1>{{.emoji}} {{.name}}</h1>
         <nav>
-            <a href="/">Informations</a>
+            <a href="/">Information</a>
             |
             <a href="/vars">Env. variables</a>
             |
