--- a/views/layouts/main.go.html
+++ b/views/layouts/main.go.html
@@ -93,6 +93,12 @@
             <a href="/vars">Env. variables</a>
             |
             <a href="/files">Files</a>
+            |
+            <a href="/memory">Memory</a>
+            <br>
+            <a href="/metrics">Metrics</a>
+            |
+            <a href="/healthz">HealthCheck</a>
         </nav>
         {{embed}}
         <footer>
