--- a/internal/potter/webui/views/layouts/main.go.html
+++ b/internal/potter/webui/views/layouts/main.go.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <style>
     body {
         background-color: {{.bgColor}};
